--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rxjs": "^7.2.0",
     "sequelize": "^6.29.1",
     "sequelize-typescript": "^2.1.5",
+    "sharp": "^0.31.3",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   },
@@ -46,9 +47,11 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.11.18",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
+    "@types/sharp": "^0.31.1",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
